# win-debloat

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml
nix/: build.nix
src/: main.rs  mod.rs
src/fixes/: ai.rs  apps.rs  appx.rs  autounattend.rs  cap.rs  mod.rs  registry.rs
src/helpers/: cli.rs  consts.rs  h.rs  iso.rs  mod.rs  term.rs  wim.rs
