[package]
name = "win-debloat"
version = "0.1.0"
edition = "2024"
description = "Windows ISO debloater for Linux - repack clean ISOs using wimlib and xorriso"

[[bin]]
name = "win-debloat"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colored = "2"
tempfile = "3"
which = "6"
walkdir = "2.5.0"
quick-xml = "0.40.1"
xml_builder_macro = { git = "https://github.com/tnichols217/xml_builder_macro.git", tag = "v0.1.0" }
